--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,8 @@
   * Fix a possible segfault when reading from a status client.
   * Log a more accurate description of ssl_ciphers.
   * Make the Windows client return codes other than 0.
+  * Set openssl options SSL_OP_NO_SSLv2 and SSL_OP_NO_SSLv3, to avoid the
+    poodle vulnerability.
 
 2014-09-28 Changes in burp-1.4.24:
   * Make vss_strip.c include the configure output, so that vss_strip gets the
